--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -94,6 +94,8 @@
          "7-4": " شراكة محتملة",
          "7-5": " اسباب اخري ...",
          "8": "رسالة",         
-         "9": "إرسال"
+         "9": "إرسال",
+         "10": "شكرا لك!",
+         "11": "رجوع إلي الرئيسية"
      }
  }
