--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -94,6 +94,8 @@
         "7-4": "Partnership",
         "7-5": "Other ...",
         "8": "Message",
-        "9": "Send"
+        "9": "Send",
+        "10": "Thank you!",
+        "11": "Back to home"
     }
 }
